--- a/css files/style.css
+++ b/css files/style.css
@@ -1,7 +1,42 @@
-html {
-    background-color: aquamarine;
-}
+* {
+    margin: 0px; 
+    }
+    header {
+        text-align: center;
+        display: wrap;
+    }
+    
+    #navbar {
+        display: flex;
+        justify-content: space-around;
+        position: fixed;
+        width: 100%; 
+        height: 50px;
+        font-size: 16px;
+        padding: 20px;
+    }
+    
+    #navlist {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    
+    .navlist a{
+        display: block;
+        padding: 1rem;
+    }
 
-h1 {
-    background-color: blueviolet;
-}
+
+    .navlist a:hover {
+     background: #B5E4E6;
+    }
+
+    main {
+        padding-top: 50px;;
+        margin: 20px;
+    }
+
+    footer {
+        text-align: center;
+    }
