--- a/css files/vegetarian.css
+++ b/css files/vegetarian.css
@@ -1,9 +1,16 @@
 * {
     margin: 0px; 
     }
+
+    html {
+        background-color: rgba(186, 186, 186, 0.308);
+    }
+
     header {
         text-align: center;
         display: wrap;
+        background-color: rgb(203, 160, 255);
+        padding-top: 30px;;
     }
     
     #navbar {
@@ -11,9 +18,10 @@
         justify-content: space-around;
         position: fixed;
         width: 100%; 
-        height: 50px;
-        font-size: 16px;
+        height: 20px;
+        font-size: 18px;
         padding: 20px;
+        background-color: rgb(203, 160, 255);
     }
     
     #navlist {
@@ -33,8 +41,20 @@
     }
 
     main {
-        padding-top: 50px;;
+        padding-top: 60px;
         margin: 20px;
+    }
+
+    h1{
+        font-size: 36px;
+    }
+
+    h2{
+        font-size: 24px;
+    }
+
+    a{
+        font-size: 16px;
     }
 
     footer {
