--- a/css files/dairy.css
+++ b/css files/dairy.css
@@ -8,20 +8,23 @@
 
     header {
         text-align: center;
+        width: 100%;
         display: wrap;
-        background-color: rgb(203, 160, 255);
-        padding-top: 30px;;
+        background-color: rgba(203, 160, 255, 0.925);
+        padding-top: 30px;
+        padding-bottom: 30px;
     }
     
     #navbar {
         display: flex;
         justify-content: space-around;
-        position: fixed;
+        /*position: fixed;*/
         width: 100%; 
         height: 20px;
         font-size: 18px;
-        padding: 20px;
-        background-color: rgb(203, 160, 255);
+        padding-top: 20px;
+        padding-bottom: 20px;
+        background-color: rgb(253, 252, 205);
     }
     
     #navlist {
