--- a/css files/vegan.css
+++ b/css files/vegan.css
@@ -24,7 +24,7 @@
         font-size: 18px;
         padding-top: 20px;
         padding-bottom: 20px;
-        background-color: rgb(253, 252, 205);
+        background-color: #B3A7C2;
     }
     
     #navlist {
