--- a/css files/style.css
+++ b/css files/style.css
@@ -3,14 +3,14 @@
     }
 
     html {
-        background-color: rgba(186, 186, 186, 0.308);
+        background-color: rgba(186, 186, 186, 0.185);
     }
 
     header {
         text-align: center;
         width: 100%;
         display: wrap;
-        background-color: rgba(203, 160, 255, 0.938);
+        background-color: rgba(203, 160, 255, 0.925);
         padding-top: 30px;
         padding-bottom: 30px;
     }
@@ -24,7 +24,7 @@
         font-size: 18px;
         padding-top: 20px;
         padding-bottom: 20px;
-        background-color: rgb(203, 179, 235);
+        background-color: rgba(253, 252, 205, 0.664);
     }
     
     #navlist {
@@ -62,4 +62,5 @@
 
     footer {
         text-align: center;
+        padding-bottom: 10px;
     }
