--- a/css files/style.css
+++ b/css files/style.css
@@ -11,7 +11,7 @@
         text-align: center;
         width: 100%;
         display: wrap;
-        background-color: rgba(203, 160, 255, 0.925);
+        background-color: rgb(252, 251, 182);
         padding-top: 30px;
         padding-bottom: 30px;
     }
@@ -19,13 +19,14 @@
     #navbar {
         display: flex;
         justify-content: space-around;
-        /*position: fixed;*/
+        /*position: fixed;
+        background-color(purple): rgba(203, 160, 255, 0.925);*/
         width: 100%; 
         height: 20px;
         font-size: 18px;
         padding-top: 20px;
         padding-bottom: 20px;
-        background-color: rgb(243, 242, 197);
+        background-color: rgb(252, 251, 182);
     }
     
     #navlist {
