--- a/css files/vegetarian.css
+++ b/css files/vegetarian.css
@@ -1,30 +1,32 @@
+/*Whole page*/
 * {
     margin: 0px; 
     }
 
     html {
-        background-color: rgba(186, 186, 186, 0.185);
+        background-color: rgba(186, 186, 186, 0.151);
     }
-
+/*Header*/
     header {
         text-align: center;
         width: 100%;
         display: wrap;
-        background-color: rgba(203, 160, 255, 0.692);
+        background-color: rgb(252, 251, 182);
         padding-top: 30px;
         padding-bottom: 30px;
     }
-    
+    /*Navagation working*/
     #navbar {
         display: flex;
         justify-content: space-around;
-        /*position: fixed;*/
+        /*position: fixed;
+        background-color(purple): rgba(203, 160, 255, 0.925);*/
         width: 100%; 
         height: 20px;
         font-size: 18px;
         padding-top: 20px;
         padding-bottom: 20px;
-        background-color: rgba(253, 252, 205, 0.349);
+        background-color: rgb(252, 251, 182);
     }
     
     #navlist {
@@ -42,7 +44,7 @@
     .navlist a:hover {
      background: #B5E4E6;
     }
-
+/*Body and main working working*/
     main {
         padding-top: 20px;
         margin: 20px;
@@ -56,10 +58,11 @@
         font-size: 24px;
     }
 
-    a{
+    a, p{
         font-size: 16px;
     }
 
+/*footer*/
     footer {
         text-align: center;
         padding-bottom: 10px;
