--- a/css files/style.css
+++ b/css files/style.css
@@ -21,9 +21,10 @@
         width: 100%; 
         height: 20px;
         font-size: 18px;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 10px;
+        padding-bottom: 30px;
         background-color: rgb(252, 251, 182);
+       
     }
     
     #navlist {
@@ -32,7 +33,7 @@
         justify-content: space-evenly;
     }
     
-    .navlist a{
+    #navlist a{
         display: block;
         padding: 1rem;
     }
@@ -40,6 +41,7 @@
 
     .navlist a:hover {
      background: teal;
+     color: teal;
     }
 /*Body and main working working*/
 
@@ -71,9 +73,16 @@
     ol, ul{
         font-size: 16px;
     }
+    #what {
+        list-style: square;
+    }
 
 /*footer*/
     footer {
+        background-color:rgb(252, 251, 182);
+        border-style: ridge;
+        border-color: rgba(128, 128, 128, 0.192);
         text-align: center;
         padding-bottom: 10px;
+        padding-top: 10px;
     }
