--- a/css files/vegan.css
+++ b/css files/vegan.css
@@ -2,6 +2,7 @@
 * {
     margin: 0px; 
     }
+
 /*Header*/
     header {
         text-align: center;
@@ -20,9 +21,10 @@
         width: 100%; 
         height: 20px;
         font-size: 18px;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        padding-top: 10px;
+        padding-bottom: 30px;
         background-color: rgb(252, 251, 182);
+       
     }
     
     #navlist {
@@ -31,16 +33,22 @@
         justify-content: space-evenly;
     }
     
-    .navlist a{
+    #navlist a{
         display: block;
         padding: 1rem;
     }
 
 
     .navlist a:hover {
-     background: #B5E4E6;
+     background: teal;
+     color: teal;
     }
 /*Body and main working working*/
+
+    body{
+        margin: 0;
+    }
+
     main {
         padding-top: 20px;
         margin: 20px;
@@ -54,12 +62,27 @@
         font-size: 24px;
     }
 
+    h3{
+        border-color: rgba(0, 0, 0, 0.548);
+        font-size: 14px;
+    }
+
     a, p{
+        font-size: 18px;
+    }
+    ol, ul{
         font-size: 16px;
+    }
+    #what {
+        list-style: square;
     }
 
 /*footer*/
     footer {
+        background-color:rgb(252, 251, 182);
+        border-style: ridge;
+        border-color: rgba(128, 128, 128, 0.192);
         text-align: center;
         padding-bottom: 10px;
+        padding-top: 10px;
     }
