--- a/css files/style.css
+++ b/css files/style.css
@@ -2,7 +2,12 @@
 * {
     margin: 0px;
     font-family: 'Open Sans', sans-serif;
+    color: black;
     }
+a:link {
+    text-decoration: none;
+
+}    
 
 /*Header*/
     header {
@@ -23,7 +28,7 @@
         height: 20px;
         font-size: 18px;
         padding-top: 10px;
-        padding-bottom: 40px;
+        padding-bottom: 60px;
         background-color: rgb(252, 251, 182);
     }
     
@@ -40,8 +45,9 @@
 
 
     #navlist a:hover {
-     background: rgba(255, 166, 0, 0.185);
+     background: rgba(203, 160, 255, 0.514)
     }
+
 /*Body and main working working*/
 
     body{
@@ -62,16 +68,32 @@
     }
 
     h3{
-        border-color: rgba(0, 0, 0, 0.548);
+        border-color: rgba(0, 0, 0, 0.514);
         font-size: 14px;
     }
 
     a, p{
-        font-size: 18px;
-    }
-    ol, ul{
         font-size: 16px;
     }
+
+    #links a:active {
+        background-color: rgba(203, 160, 255, 0.925)
+      }
+    
+    #links a:hover{
+        background-color: rgba(203, 160, 255, 0.925)
+    }
+
+    ol, ul, dl{
+        font-size: 14px;
+        margin: 10px;
+        padding: 10px;
+        float: center; 
+    }
+    .list {
+        display: wrap;
+    }
+
     #what {
         list-style: square;
     }
@@ -81,6 +103,7 @@
         background-color:rgb(252, 251, 182);
         border-style: ridge;
         border-color: rgba(128, 128, 128, 0.192);
+        border-width: medium;
         text-align: center;
         padding-bottom: 10px;
         padding-top: 10px;
