Turned off the a:link

--- a/css files/vegan.css
+++ b/css files/vegan.css
@@ -3,7 +3,11 @@
     margin: 0px; 
     font-family: 'Open Sans', sans-serif;
     }
+    
+a:link {
+    text-decoration: none;
 
+}  
 /*Header*/
     header {
         text-align: center;
