--- a/css files/vegetarian.css
+++ b/css files/vegetarian.css
@@ -4,6 +4,10 @@
     font-family: 'Open Sans', sans-serif;
     }
 
+a:link {
+    text-decoration: none;
+
+}  
 /*Header*/
     header {
         text-align: center;
