--- a/css files/gluten.css
+++ b/css files/gluten.css
@@ -74,6 +74,7 @@ a:link {
         font-size: 16px;
     }
     
+    /*:active*/
     #links a:active {
         background-color: rgba(203, 160, 255, 0.925)
       }
