--- a/css files/style.css
+++ b/css files/style.css
@@ -77,6 +77,7 @@ a:link {
         font-size: 16px;
     }
 
+    /*:active*/
     #links a:active {
         background-color: rgba(203, 160, 255, 0.925)
       }
