--- a/css files/gluten.css
+++ b/css files/gluten.css
@@ -1,7 +1,8 @@
 /*Whole page*/
 * {
-    margin: 0px; 
+    margin: 0px;
     font-family: 'Open Sans', sans-serif;
+    color: black;
     }
 
 a:link {
@@ -49,16 +50,21 @@ a:link {
 
     /*:active*/
     #navlist a:active {
-        background-color: rgba(203, 160, 255, 0.925)
+        background-color: rgba(141, 140, 141, 0.925)
+    }
+
+    #navbar a:active {
+        background-color: rgba(141, 140, 141, 0.925)
     }
 
     #links a:active {
-        background-color: rgba(203, 160, 255, 0.925)
+        background-color: rgba(141, 140, 141, 0.925)
       }
     
     #links a:hover{
         background-color: rgba(203, 160, 255, 0.925)
     }
+
 /*Body and main working working*/
 
     body{
