--- a/css files/style.css
+++ b/css files/style.css
@@ -50,11 +50,15 @@ a:link {
 
      /*:active*/
      #navlist a:active {
-        background-color: rgba(203, 160, 255, 0.925)
+        background-color: rgba(141, 140, 141, 0.925)
+    }
+
+    #navbar a:active {
+        background-color: rgba(141, 140, 141, 0.925)
     }
 
     #links a:active {
-        background-color: rgba(203, 160, 255, 0.925)
+        background-color: rgba(141, 140, 141, 0.925)
       }
     
     #links a:hover{
