--- a/css files/vegan.css
+++ b/css files/vegan.css
@@ -1,9 +1,9 @@
 /*Whole page*/
 * {
-    margin: 0px; 
+    margin: 0px;
     font-family: 'Open Sans', sans-serif;
+    color: black;
     }
-    
 a:link {
     text-decoration: none;
 
@@ -47,18 +47,23 @@ a:link {
      background: rgba(255, 166, 0, 0.185);
     }
 
-    /*:active*/
-    #navlist a:active {
-        background-color: rgba(203, 160, 255, 0.925)
+     /*:active*/
+     #navlist a:active {
+        background-color: rgba(141, 140, 141, 0.925)
+    }
+
+    #navbar a:active {
+        background-color: rgba(141, 140, 141, 0.925)
     }
 
     #links a:active {
-        background-color: rgba(203, 160, 255, 0.925)
+        background-color: rgba(141, 140, 141, 0.925)
       }
     
     #links a:hover{
         background-color: rgba(203, 160, 255, 0.925)
     }
+
 /*Body and main working working*/
 
     body{
