--- a/css files/vegetarian.css
+++ b/css files/vegetarian.css
@@ -1,7 +1,8 @@
 /*Whole page*/
 * {
-    margin: 0px; 
+    margin: 0px;
     font-family: 'Open Sans', sans-serif;
+    color: black;
     }
 
 a:link {
@@ -47,19 +48,23 @@ a:link {
      background: rgba(255, 166, 0, 0.185);
     }
 
-    /*:active*/
-    #navlists a:active {
-        background-color: rgba(203, 160, 255, 0.925)
+     /*:active*/
+     #navlist a:active {
+        background-color: rgba(141, 140, 141, 0.925)
+    }
+
+    #navbar a:active {
+        background-color: rgba(141, 140, 141, 0.925)
     }
 
     #links a:active {
-        background-color: rgba(203, 160, 255, 0.925)
+        background-color: rgba(141, 140, 141, 0.925)
       }
     
     #links a:hover{
         background-color: rgba(203, 160, 255, 0.925)
     }
-/*Body and main working working*/
+ and main working working*/
 
     body{
         margin: 0;
