--- a/css files/dairy.css
+++ b/css files/dairy.css
@@ -42,7 +42,9 @@ a:link {
         display: block;
         padding: 1rem;
     }
-
+    #navlist a:hover {
+        background: rgba(203, 160, 255, 0.514)
+       }
 
     /*:active*/
     #navlist a:active {
