--- a/css files/style.css
+++ b/css files/style.css
@@ -49,11 +49,11 @@ a:link {
     }
 
      /*:active*/
-     #navlist a:active {
+    .active a:active {
         background-color: rgba(141, 140, 141, 0.925)
     }
 
-    #navbar a:active {
+    #navlist a:active {
         background-color: rgba(141, 140, 141, 0.925)
     }
 
