--- a/css files/vegetarian.css
+++ b/css files/vegetarian.css
@@ -49,11 +49,14 @@ a:link {
        }
 
      /*:active*/
-     #navlist a:active {
+     .active:active {
         background-color: rgba(141, 140, 141, 0.925)
     }
+    nav .active:active {
+        color: rgb(115, 0, 255);
+    }
 
-    #navbar a:active {
+    #navlist a:active {
         background-color: rgba(141, 140, 141, 0.925)
     }
 
@@ -64,7 +67,7 @@ a:link {
     #links a:hover{
         background-color: rgba(203, 160, 255, 0.925)
     }
- and main working working*/
+ /*and main working working*/
 
     body{
         margin: 0;
