--- a/css files/dairy.css
+++ b/css files/dairy.css
@@ -47,11 +47,14 @@ a:link {
        }
 
     /*:active*/
-    #navlist a:active {
+    .active:active {
         background-color: rgba(141, 140, 141, 0.925)
     }
+    nav .active:active {
+        color: rgb(115, 0, 255);
+    }
 
-    #navbar a:active {
+    #navlist a:active {
         background-color: rgba(141, 140, 141, 0.925)
     }
 
