Adding Gallery and some more recipes

--- a/css files/gluten.css
+++ b/css files/gluten.css
@@ -47,10 +47,12 @@ a:link {
     #navlist a:hover {
         background: rgba(203, 160, 255, 0.514)
        }
-     /*:active*/
-     .active .current{
+    
+    
+    /*:active*/
+    .active a.current{
         color: black;
-        background-color: rgba(141, 140, 141, 0.925);
+        background-color: rgba(141, 140, 141, 0.377);
      }
      
   nav:active{
