--- a/css files/style.css
+++ b/css files/style.css
@@ -49,7 +49,7 @@ a:link {
     }
 
      /*:active*/
-    .active .current{
+    .active a.current{
         color: black;
         background-color: rgba(141, 140, 141, 0.377);
      }
