--- a/css files/style.css
+++ b/css files/style.css
@@ -93,6 +93,18 @@ a:link {
         list-style: none;
     }
 
+    #list{
+        display: block; 
+        text-align: left;
+    }
+
+    #monkey{
+        display: flex;
+        flex-wrap: wrap;
+        object-position: right;
+        font-size: 12px;
+    }
+
     a, p{
         font-size: 16px;
     }
