--- a/css files/style.css
+++ b/css files/style.css
@@ -100,9 +100,14 @@ a:link {
 
     #monkey{
         display: flex;
-        flex-wrap: wrap;
-        object-position: right;
+        justify-content: flex-end;
         font-size: 12px;
+
+    }
+
+    #george {
+        display: flex;
+        flex-direction: column;
     }
 
     a, p{
