--- a/css files/style.css
+++ b/css files/style.css
@@ -100,14 +100,18 @@ a:link {
 
     #monkey{
         display: flex;
-        justify-content: flex-end;
         font-size: 12px;
+        justify-content: space-around;
+    }
 
+    #food{
+        height: 150px
     }
 
     #george {
         display: flex;
         flex-direction: column;
+        justify-content: flex-end;
     }
 
     a, p{
