--- a/css files/style.css
+++ b/css files/style.css
@@ -106,7 +106,7 @@ a:link {
 
     #food{
         height: 100%;
-        padding-right: 10px;
+        padding-right: 50px;
     }
 
     #george {
@@ -117,6 +117,7 @@ a:link {
 
     #caption{
         padding-left: 40px;
+        padding-bottom: 20px;
     }
 
     a, p{
