--- a/css files/gallery.css
+++ b/css files/gallery.css
@@ -128,6 +128,7 @@ a:link {
     }
 
     #figure{
+        background-color: rgba(252, 251, 182, 0.26);
         border-style: ridge;
         border-color: rgba(128, 128, 128, 0.192);
         width: 170px
