--- a/css files/style.css
+++ b/css files/style.css
@@ -138,6 +138,12 @@ a:link {
         list-style: square;
     }
 
+    textarea {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+
 /*footer*/
     footer {
         background-color:rgb(252, 251, 182);
