--- a/css files/gallery.css
+++ b/css files/gallery.css
@@ -62,7 +62,12 @@ a:link {
     .links a:active {
         background-color: rgba(141, 140, 141, 0.925);
       }
-
+/*MAIN*/
+      .wrapper{
+        width: auto;
+        max-width: 100000000px;
+        min-width: 300px;
+      }
 
 
     body{
