--- a/css files/vegan.css
+++ b/css files/vegan.css
@@ -13,7 +13,7 @@ a:link {
         text-align: center;
         width: 100%;
         display: wrap;
-        background-color: rgb(252, 251, 182);
+        background-image: url("/images/lemons.jpg");
         padding-top: 30px;
         padding-bottom: 30px;
     }
