--- a/css files/style.css
+++ b/css files/style.css
@@ -173,7 +173,7 @@ a:link {
         height: 20px;
         font-size: 18px;
         padding-top: 10px;
-        padding-bottom: 55px;
+        padding-bottom: 60px;
         background-color: rgb(252, 251, 182);
     }
     
@@ -192,8 +192,33 @@ a:link {
      background: rgba(203, 160, 255, 0.514);
     }
 }
-
 @media screen and (max-width: 970px) {
+    #navbar {
+        display: flex;
+        justify-content: space-around;
+        width: 100%; 
+        height: 20px;
+        padding-bottom: 100px;
+        background-color: rgb(252, 251, 182);
+    }
+    
+    #navlist {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    
+    #navlist a{
+        display: block;
+        padding: .4rem;
+    }
+
+    #navlist a:hover {
+     background: rgba(203, 160, 255, 0.514);
+    }
+}
+
+@media screen and (max-width: 600px) {
     #navbar {
         display: flex;
         justify-content: space-around;
@@ -217,29 +242,7 @@ a:link {
     #navlist a:hover {
      background: rgba(203, 160, 255, 0.514);
     }
-}
-@media screen and (max-width: 600px) {
-    #navbar {
-        display: flex;
-        justify-content: space-around;
-        width: 100%; 
-        height: 20px;
-        padding-bottom: 90px;
-        background-color: rgb(252, 251, 182);
-    }
-    
-    #navlist {
-        width: 100%;
-        display: flex;
-        justify-content: space-evenly;
-    }
-    
-    #navlist a{
-        display: block;
-        padding: .5rem;
-    }
-
-    #navlist a:hover {
-     background: rgba(203, 160, 255, 0.514);
+    button{
+        border-radius: 25px;
     }
 }
