--- a/css files/vegan.css
+++ b/css files/vegan.css
@@ -119,6 +119,7 @@ a:link {
 
     #why {
         list-style-image: url("/images/tomato.jpg");
+        text-align: center;
     }
 
     .Header {
