--- a/css files/vegetarian.css
+++ b/css files/vegetarian.css
@@ -110,6 +110,7 @@ a:link {
 
     #why {
         list-style-image: url("/images/tomato.jpg");
+        text-align: center;
     }
 
     ol, ul, dl{
