--- a/css files/vegan.css
+++ b/css files/vegan.css
@@ -113,14 +113,13 @@ a:link {
         display: wrap;
     }
 
-    li {
-        margin: 10px;
-    }
-
-    #why {
-        list-style-image: url("/images/tomato.jpg");
-        text-align: center;
-    }
+    #what {
+        background: url("/images/tomato.jpg") no-repeat left top; /* <-- change `left` & `top` too for extra control */
+        padding: 1px 0px 0px 22px;
+        /* reset styles (optional): */
+        list-style: none;
+        margin: 0;
+        }
 
     .Header {
         display: flex;
