--- a/css files/style.css
+++ b/css files/style.css
@@ -66,13 +66,11 @@ a:link {
       }
 
 /*Body and main working working*/
-    .wrapper{
-        width: auto;
-        max-width: 100000000px;
-        min-width: 300px;
-        
-      }
-
+/*Wrapper*/
+.wrapper {
+    max-width: 960px; /* 20px smaller, to fit the paddings on the sides */ 
+    margin: auto;
+  }
     body{
         margin: 0;
     }
@@ -219,6 +217,9 @@ a:link {
 }
 
 @media screen and (max-width: 600px) {
+    html {
+        background-color: rgba(203, 160, 255, 0.514);
+    }
     #navbar {
         display: flex;
         justify-content: space-around;
@@ -226,6 +227,7 @@ a:link {
         height: 20px;
         padding-bottom: 90px;
         background-color: rgb(252, 251, 182);
+        
     }
     
     #navlist {
@@ -236,7 +238,7 @@ a:link {
     
     #navlist a{
         display: block;
-        padding: .4rem;
+        padding: 3px;
     }
 
     #navlist a:hover {
