--- a/css files/dairy.css
+++ b/css files/dairy.css
@@ -166,6 +166,7 @@ footer {
     }
 }
 @media screen and (max-width: 970px) {
+   
     #navbar {
         display: flex;
         justify-content: space-around;
@@ -192,6 +193,9 @@ footer {
 }
 
 @media screen and (max-width: 600px) {
+    html {
+        background-color: rgba(203, 160, 255, 0.514);
+    }
     #navbar {
         display: flex;
         justify-content: space-around;
@@ -199,6 +203,7 @@ footer {
         height: 20px;
         padding-bottom: 90px;
         background-color: rgb(252, 251, 182);
+        
     }
     
     #navlist {
@@ -209,7 +214,7 @@ footer {
     
     #navlist a{
         display: block;
-        padding: .4rem;
+        padding: 3px;
     }
 
     #navlist a:hover {
