--- a/css files/gluten.css
+++ b/css files/gluten.css
@@ -193,6 +193,9 @@ a:link {
 }
 
 @media screen and (max-width: 600px) {
+    html {
+        background-color: rgba(203, 160, 255, 0.514);
+    }
     #navbar {
         display: flex;
         justify-content: space-around;
@@ -200,6 +203,7 @@ a:link {
         height: 20px;
         padding-bottom: 90px;
         background-color: rgb(252, 251, 182);
+        
     }
     
     #navlist {
@@ -210,7 +214,7 @@ a:link {
     
     #navlist a{
         display: block;
-        padding: .4rem;
+        padding: 3px;
     }
 
     #navlist a:hover {
