--- a/css files/style.css
+++ b/css files/style.css
@@ -67,11 +67,11 @@ a:link {
 
 /*Body and main working working*/
 /*Wrapper*/
-.wrapper {
-    max-width: 100000000000px; /* 20px smaller, to fit the paddings on the sides */
-    margin: 0; 
+.wrapper{
+    width: auto;
+    max-width: 100000000px;
+    min-width: 300px;
   }
-
     main {
         padding-top: 20px;
         margin: 20px;
