--- a/css files/GF & DF.css
+++ b/css files/GF & DF.css
@@ -13,6 +13,7 @@ a:link {
 header {
     text-align: center;
     width: 100%;
+    height: 100px;
     display: wrap;
     background-image: url("/images/lemons.jpg");
     padding-top: 30px;
