--- a/css files/V&V.css
+++ b/css files/V&V.css
@@ -14,6 +14,7 @@ a:link {
     header {
         text-align: center;
         width: 100%;
+        height: 100px;
         display: wrap;
         background-image: url("/images/lemons.jpg");
         padding-top: 30px;
@@ -99,8 +100,27 @@ a:link {
         text-align: left;
     }
 
-    #why {
-        list-style-image: url("/images/tomato.jpg");
+    #monkey{
+        display: flex;
+        font-size: 12px;
+        justify-content: space-between;
+    }
+
+    #food{
+        height: 100%;
+        padding-right: 50px;
+        filter: drop-shadow(1px 1px 3px #00000041);
+    }
+
+    #george {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+
+    #caption{
+        padding-left: 40px;
+        padding-bottom: 20px;
     }
 
     a, p{
@@ -117,8 +137,8 @@ a:link {
         display: wrap;
     }
 
-    #what {
-        list-style: square;
+    #why {
+        list-style-image: url("/images/tomato.jpg");
     }
 
     textarea {
