--- a/css files/W2G.css
+++ b/css files/W2G.css
@@ -140,7 +140,7 @@ background-color: rgba(203, 160, 255, 0.925);
         margin: 20px;
 
      }
-     /*footer
+     /*trial and error
      .project-grid {
         display: grid;
         grid-template-rows: repeat(auto-fit, minmax(200px));
